# GramEditor

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-AGPL  LICENSE-APACHE  MISSION.md  Procfile  README.md  TODO.md  clippy.toml  rust-toolchain.toml  typos.toml
.cargo/: ci-config.toml
.config/: nextest.toml
.forgejo/workflows/: ci.yaml  release.yaml
.github/workflows/: rust.yaml  windows-test.yaml  windows.yaml
.gram/: debug.jsonc  settings.json  settings.jsonc
.tehanu/: debug.json  settings.json
assets/: registry.toml
assets/badge/: v0.json
assets/images/: App Icon Template.afdesign  logo.afdesign
assets/keymaps/: default-linux.json  default-linux.jsonc  default-macos.json  default-macos.jsonc  default-windows.json  default-windows.jsonc  initial.json  vim.json  vim.jsonc
assets/settings/: default.json  default.jsonc  initial_debug_tasks.json  initial_local_debug_tasks.json  initial_local_settings.json  initial_server_settings.json  initial_tasks.json  initial_tasks.jsonc  initial_user_settings.json
crates/activity_indicator/: Cargo.toml
crates/app_actions/: Cargo.toml
crates/app_env_vars/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/cli/: README.md  build.rs
crates/client/: Cargo.toml
crates/collections/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/dap/: Cargo.toml
crates/db/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/docs/: Cargo.toml
crates/docs_preprocessor/: Cargo.toml
crates/editor/: Cargo.toml
crates/explorer_command_injector/: AppxManifest-Nightly.xml  AppxManifest-Preview.xml  AppxManifest.xml  Cargo.toml
crates/extension/: Cargo.toml
crates/extension_api/: Cargo.toml  PENDING_CHANGES.md  README.md
crates/extension_cli/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/feedback/: Cargo.toml
crates/git_graph/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/gpui/: Cargo.toml  README.md
crates/gram/: Cargo.toml  build.rs
crates/gram/resources/: gram.desktop.in
crates/gram/resources/flatpak/: gram.metainfo.xml.in  manifest-template.json
crates/gram/resources/info/: DocumentTypes.plist  Permissions.plist
crates/gram/resources/snap/: snapcraft.yaml.in
crates/gram/resources/windows/: gram.iss  gram.sh
crates/gram/src/: gram-main.rs  gram.rs  main.rs  reliability.rs
crates/gram/src/gram/: app_menus.rs  component_preview.rs  mac_only_instance.rs  open_listener.rs  quick_action_bar.rs  windows_only_instance.rs
crates/gram/src/gram/quick_action_bar/: repl_menu.rs
crates/http_client/: Cargo.toml
crates/icons/: README.md
crates/inspector_ui/: Cargo.toml  README.md  build.rs
crates/install_cli/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language/: build.rs
crates/language_onboarding/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/media/: Cargo.toml
crates/miniprofiler_ui/: Cargo.toml
crates/notifications/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/outline/: Cargo.toml
crates/outline_panel/: Cargo.toml
crates/project/: Cargo.toml
crates/project_benchmarks/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/proto/: Cargo.toml  build.rs
crates/recent_projects/: Cargo.toml
crates/remote/: Cargo.toml
crates/remote_server/: Cargo.toml  build.rs
crates/repl/: Cargo.toml
crates/rpc/: Cargo.toml
crates/schema_generator/: README.md
crates/search/: Cargo.toml
crates/semantic_version/: Cargo.toml
crates/settings_profile_selector/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/system_specs/: Cargo.toml
crates/task/: Cargo.toml
crates/tasks_ui/: Cargo.toml
crates/tehanu/: Cargo.toml  build.rs
crates/terminal_view/: Cargo.toml  README.md
crates/theme_importer/: README.md
crates/theme_selector/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/util/: Cargo.toml
crates/util_macros/: Cargo.toml
crates/vim/: Cargo.toml  README.md
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml
crates/zlog/: README.md
docs/: README.md  SUMMARY.md  book.toml  command-palette.md  completions.md  configuring-gram.md  configuring-languages.md  debugger.md  development.md  diagnostics.md  environment.md  getting-started.md  git.md  globs.md  helix.md  icon-themes.md  index.md  key-bindings.md  language-servers.md  languages.md  linux.md  mission.md  multibuffers.md  outline-panel.md  remote-development.md  repl.md  snippets.md  supertab.md  tab-switcher.md  tasks.md  themes.md  toolchains.md  troubleshooting.md  uninstall.md  vim.md  visual-customization.md  windows.md
docs/src/: git.md  (+37 more)
extensions/: EXTRACTION.md  README.md
script/: bootstrap  bootstrap.ps1  build-docker  bump-minor-versions  bump-patch-version  bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  check-licenses  crate-dep-graph  create-migration  debug-cli  determine-release-channel  determine-release-channel.ps1  draft-release-notes  drop-test-dbs  generate-licenses  generate-licenses-csv  generate-licenses.ps1  get-pull-requests-since  get-release-notes-since  github-clean-issue-types.py  github-pr-status  install-linux  install-wild  install.sh  linux  new-crate  prettier  prompts  randomized-test-ci  reset_db  run-local-minio  setup-dev-driver.ps1  snap-build  snap-try  squawk  tehanu-local  trigger-release  (+5 more)
(+676 files in other folders)
